@@ -67,7 +67,9 @@ typedef struct {
 #define PERIPHERAL_LINK_COUNT           1                                           /**<number of peripheral links used by the application. When changing this number remember to adjust the RAM settings*/
 #endif
 
+#ifndef APP_TIMER_OP_QUEUE_SIZE
 #define APP_TIMER_OP_QUEUE_SIZE         2                                           /**< Size of timer operation queues. */
+#endif
 #define APP_TIMER_PRESCALER             0                                           /**< Value of the RTC1 PRESCALER register. */
 
 // BLE HID stuff
